k8s/applications/media/arr/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: arr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: applications
    app.kubernetes.io/managed-by: argocd
spec:
  serviceName: prowlarr
  replicas: 0
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: media,tmp,run
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/part-of: applications
        app.kubernetes.io/managed-by: argocd
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-share
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: prowlarr
          image: ghcr.io/vegops/prowlarr:2.4.0.5397-r2@sha256:48b9b6d55f2d84a0ddbe7820c5318d7630fc21d04f1c828ecc796748fdf2d539
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /prowlarr/data
            - name: media
              mountPath: /data
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "proxmox-csi"
        resources:
          requests:
            storage: 5Gi
