k8s/applications/media/arr/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: prowlarr-web
      port: 80
      targetPort: http
